snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1-sources.jar.md5
b80b748093eff27d19470fa388acee1f